chore: search films filters
